--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 {
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(pexels-vlad-alexandru-popa-1402787.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(pexels-garvin-st-villier-3311574.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -24,7 +24,8 @@
 .logo
 {
     cursor: pointer;
-    width: 120px;
+    width: 130px;
+
 }
 .navbar ul li
 {
@@ -32,6 +33,7 @@
     display: inline-block;
     margin: 0 20px;
     position: relative;
+    font-size: 20px;
 }
 .navbar ul li a
 {
@@ -44,7 +46,7 @@
     content: '';
     height: 3px;
     width: 0%;
-    background: #009688;
+    background: #FFD801;
     position: absolute;
     left: 0;
     bottom: -10px;
@@ -66,11 +68,48 @@
 .content h1
 {
     font-size: 70px;
-    margin-bottom: 250px;
+    margin-top: 80px;
 }
 .content p
 {
     margin: 20px auto;
     font-weight: 100;
     line-height: 25px;
+}
+button
+{
+    text-transform: capitalize;
+    width: 200px;
+    padding: 15px 0;
+    text-align: center;
+    border-radius: 25px;
+    margin: 20px 10px;
+    font-weight: bold;
+    border: 2px solid #FFD801;
+    background: transparent;
+    cursor: pointer;
+    color: #fff;
+    position: relative;
+    overflow: hidden;
+}
+span
+{
+    width: 0;
+    height: 100%;
+    border-radius: 25px;
+    position: absolute;
+    /* background: #FFD801; */
+    background: linear-gradient(to bottom right, #FFD801, #C6A500);
+    left: 0;
+    bottom: 0;
+    z-index: -1;
+    transition: 0.5s;
+}
+button:hover span
+{
+    width: 100%;
+}
+button:hover
+{
+    border: none;
 }
